Change redirect and home route. Fix white flickering when navigating through different pages

--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -4,6 +4,9 @@
   background: $theme-black;
   color: $theme-white;
 
+  position: relative;
+  box-shadow: 0 0 1px $theme-white;
+
   > ol {
     display: flex;
     align-items: center;
